--- a/index.html
+++ b/index.html
@@ -6,10 +6,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Overview</title>
+    <!-- <style>
+        body {
+            background-color: red;
+        }
+    </style> -->
+
 </head>
 
 <body>
     <h1>JS Overview</h1>
+
+    <script>
+
+        /* variables are assigned by calling
+                var <variable-name> = <assigned value>
+        */
+       var userInitials = 'ESD'
+
+        //Javascript works with / contains a set of different value types
+        //strings are wrapped as 'String' value type
+        //numbers are wrapped as 'Number' value type
+
+        //numbers are written without quotes
+        console.log(typeof 3)
+
+        //strings are written inside quotes
+        console.log(typeof '3')
+        
+        console.log(userInitials);
+
+        //Javascript is capable of basic math (and more)
+        console.log(5 + 5)
+
+    </script>
 </body>
 
 </html>
