--- a/index.html
+++ b/index.html
@@ -12,34 +12,13 @@
         }
     </style> -->
 
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
     <h1>JS Overview</h1>
-
-    <script>
-
-        /* variables are assigned by calling
-                var <variable-name> = <assigned value>
-        */
-       var userInitials = 'ESD'
-
-        // Javascript works with / contains a set of different value types
-        // strings are wrapped as 'String' value type
-        // numbers are wrapped as 'Number' value type
-
-        //numbers are written without quotes
-        console.log(typeof 3)
-
-        //strings are written inside quotes
-        console.log(typeof '3')
-        
-        console.log(userInitials);
-
-        //Javascript is capable of basic math (and more)
-        console.log(5 + 5)
-
-    </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
