--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Overview</title>
-    
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-    <h1>JS Overview</h1>
+    <!-- <h1>JS Overview</h1> -->
+     <h1>Some Title</h1>
     <script src="js/script.js"></script>
 </body>
 
