playing around with functions and user input

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <!-- <h1>JS Overview</h1> -->
-     <h1>Some Title</h1>
+     <h1>User App</h1>
+
+     <button id="gather-btn">Gather Info</button>
+     
     <script src="js/script.js"></script>
 </body>
 
