--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <title>JS Overview</title>
     <link rel="stylesheet" href="css/style.css">
 
@@ -11,10 +12,25 @@
 
 <body>
     <!-- <h1>JS Overview</h1> -->
-     <h1>User App</h1>
+    <h1 class="head-text text-center">Note App</h1>
 
-     <button id="gather-btn">Gather Info</button>
-     
+    <form id="noteForm">
+        <h2 class="text-center">Create Note</h2>
+
+        <input id="note-input" type="text" placeholder="Enter your note text">
+
+        <button>Save Note</button>
+    </form>
+
+    <h3 class="note-header">You have not added any notes</h3>
+
+    <main class="container">
+        <!-- <article class="note">
+            <p class="note-text">Note Text</p>
+            <p class="note-date">Added 6/24/2024</p>
+        </article> -->
+    </main>
+
     <script src="js/script.js"></script>
 </body>
 
