initial commit for jquery branch

--- a/index.html
+++ b/index.html
@@ -11,26 +11,7 @@
 </head>
 
 <body>
-    <!-- <h1>JS Overview</h1> -->
-    <h1 class="head-text text-center">Note App</h1>
-
-    <form id="noteForm">
-        <h2 class="text-center">Create Note</h2>
-
-        <input id="note-input" type="text" placeholder="Enter your note text">
-
-        <button>Save Note</button>
-    </form>
-
-    <h3 class="note-header">You have not added any notes</h3>
-
-    <main class="container">
-        <!-- <article class="note">
-            <p class="note-text">Note Text</p>
-            <p class="note-date">Added 6/24/2024</p>
-        </article> -->
-    </main>
-
+    <script src="<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 
