working now after updating index.html & script.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <form class="form">
       <input type="text" id="userInput" placeholder="Which City?" required>
-      <button type="submit" class="request">Request</button>
+      <button type="click" class="request">Request</button>
     </form>
     <div class="output"></div>
 
